# toy-redis

./: .dir-locals.el  Makefile  README.md  pyproject.toml
tests/: test_command.py  test_integration.py  test_wire.py
toy_redis/: command.py  server.py  wire.py
